WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246774
WebFrame should own an AbstractFrame instead of a Frame
https://bugs.webkit.org/show_bug.cgi?id=246774
Summary
WebFrame should own an AbstractFrame instead of a Frame
Alex Christensen
Reported
2022-10-19 15:25:50 PDT
This will make it so it can own a RemoteFrame
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-19 15:26:51 PDT
<
rdar://problem/101355716
>
Alex Christensen
Comment 2
2022-10-19 15:28:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5563
EWS
Comment 3
2022-10-19 16:06:32 PDT
Committed
255765@main
(5279fe3e185e): <
https://commits.webkit.org/255765@main
> Reviewed commits have been landed. Closing PR #5563 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug