WebFrame should own an AbstractFrame instead of a Frame https://bugs.webkit.org/show_bug.cgi?id=246774 rdar://101355716

Reviewed by Chris Dumez.

* Source/WebKit/WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::initWithCoreMainFrame):
(WebKit::WebFrame::createSubframe):
(WebKit::WebFrame::frameLoaderClient const):
(WebKit::WebFrame::coreFrame const):
(WebKit::WebFrame::info const):
(WebKit::WebFrame::didReceivePolicyDecision):
(WebKit::WebFrame::addConsoleMessage):
(WebKit::WebFrame::source const):
(WebKit::WebFrame::contentsAsString const):
(WebKit::WebFrame::selectionAsString const):
(WebKit::WebFrame::size const):
(WebKit::WebFrame::isFrameSet const):
(WebKit::WebFrame::isMainFrame const):
(WebKit::WebFrame::url const):
(WebKit::WebFrame::certificateInfo const):
(WebKit::WebFrame::innerText const):
(WebKit::WebFrame::parentFrame const):
(WebKit::WebFrame::layerTreeAsText const):
(WebKit::WebFrame::pendingUnloadCount const):
(WebKit::WebFrame::allowsFollowingLink const):
(WebKit::WebFrame::jsContext):
(WebKit::WebFrame::jsContextForWorld):
(WebKit::WebFrame::jsContextForServiceWorkerWorld):
(WebKit::WebFrame::setAccessibleName):
(WebKit::WebFrame::contentBounds const):
(WebKit::WebFrame::visibleContentBounds const):
(WebKit::WebFrame::visibleContentBoundsExcludingScrollbars const):
(WebKit::WebFrame::scrollOffset const):
(WebKit::WebFrame::hasHorizontalScrollbar const):
(WebKit::WebFrame::hasVerticalScrollbar const):
(WebKit::WebFrame::hitTest const):
(WebKit::WebFrame::getDocumentBackgroundColor):
(WebKit::WebFrame::containsAnyFormElements const):
(WebKit::WebFrame::containsAnyFormControls const):
(WebKit::WebFrame::stopLoading):
(WebKit::WebFrame::jsWrapperForWorld):
(WebKit::WebFrame::provisionalURL const):
(WebKit::WebFrame::suggestedFilenameForResourceWithURL const):
(WebKit::WebFrame::mimeTypeForResourceWithURL const):
(WebKit::WebFrame::setTextDirection):
(WebKit::WebFrame::isTopFrameNavigatingToAppBoundDomain const):
* Source/WebKit/WebProcess/WebPage/WebFrame.h:

Canonical link: https://commits.webkit.org/255765@main